[package]
name = "nladm"
version = "0.1.1"
description = "List Plex activity via a Tautulli (Plexpy) Server"
repository = "https://github.com/papertigers/nladm"
keywords = ["nanoleaf", "cli", "home-automation", "lights"]
authors = ["Mike Zeller <mike@mikezeller.net>"]
edition = "2018"
license = "MIT"
categories = [
	"command-line-utilities"
]

[dependencies]
nanoleaf = { path = "../nanoleaf" }
serde = { version = "1.0", features = ["derive"] }
structopt = "0.2"
tokio = "0.1"
failure = "0.1"
futures = "0.1"
toml = "0.5"
dirs = "1.0"
